--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,8 @@
 
     <body>
         <h1>Git lesson</h1>
-        <p>This is html</p>
+        <p>This is html.</p> 
+        <h2>Dinner time</h2>
     </body>
 
     </html>
